--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,2 +1,5 @@
-server:
-  port: 8081
+spring:
+  config:
+    import:
+      - file:/etc/config/application-dev.yaml
+      - file:/etc/secret/application-secret.yaml
