--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -4,49 +4,50 @@ server:
 spring:
   cloud:
     gateway:
-      webmvc:
-        routes:
-          - id: backend-user
-            uri: http://k8s-backend-user-service:8081
-            predicates:
-              - Path=/api/user/**
-            filters:
-              - addAuthenticationHeader
+      server:
+        webmvc:
+          routes:
+            - id: backend-user
+              uri: http://k8s-backend-user-service:8081
+              predicates:
+                - Path=/api/user/**
+              filters:
+                - addAuthenticationHeader
 
-          - id: backend-asset
-            uri: http://k8s-backend-asset-service:8082
-            predicates:
-              - Path=/api/asset/**
-            filters:
-              - addAuthenticationHeader
+            - id: backend-asset
+              uri: http://k8s-backend-asset-service:8082
+              predicates:
+                - Path=/api/asset/**
+              filters:
+                - addAuthenticationHeader
 
-          - id: backend-product
-            uri: http://k8s-backend-product-service:8083
-            predicates:
-              - Path=/api/product/**
-            filters:
-              - addAuthenticationHeader
+            - id: backend-product
+              uri: http://k8s-backend-product-service:8083
+              predicates:
+                - Path=/api/product/**
+              filters:
+                - addAuthenticationHeader
 
-          - id: backend-escrow
-            uri: http://k8s-backend-escrow-service:8084
-            predicates:
-              - Path=/api/escrow/**
-            filters:
-              - addAuthenticationHeader
+            - id: backend-escrow
+              uri: http://k8s-backend-escrow-service:8084
+              predicates:
+                - Path=/api/escrow/**
+              filters:
+                - addAuthenticationHeader
 
-          - id: backend-blockchain-contract
-            uri: http://k8s-backend-contract-service:8085
-            predicates:
-              - Path=/api/contract/**
-            filters:
-              - addAuthenticationHeader
+            - id: backend-blockchain-contract
+              uri: http://k8s-backend-contract-service:8085
+              predicates:
+                - Path=/api/contract/**
+              filters:
+                - addAuthenticationHeader
 
-          - id: backend-market
-            uri: http://k8s-backend-market-service:8086
-            predicates:
-              - Path=/api/market/**
-            filters:
-              - addAuthenticationHeader
+            - id: backend-market
+              uri: http://k8s-backend-market-service:8086
+              predicates:
+                - Path=/api/market/**
+              filters:
+                - addAuthenticationHeader
 
 jwt:
   secretkey: ${JWT_SECRET_KEY}
